# llm-prompt-perturbation

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/amega/lexical/: llm_synonym_perturbation_cases.json  llm_synonym_perturbation_questions.json
data/amega/syntactic/: syntactic_perturbation_cases.json  syntactic_perturbation_questions.json
data/result_tables/: amega_lexical.csv  amega_lexical_significance.csv  amega_syntactic.csv  amega_syntactic_significance.csv  mmlu_lexical.csv  mmlu_lexical_significance.csv  mmlu_syntactic.csv  mmlu_syntactic_significance.csv  squad_lexical.csv  squad_lexical_significance.csv  squad_syntactic.csv  squad_syntactic_significance.csv
data/squad/lexical/: llm_synonym_perturbation.json
k8s/: pvc.yaml
k8s/experiments/: pvc.yaml
k8s/llms/: llama-3_2-1b-deployment.yaml  llama-3_2-1b-service.yaml  pvc.yaml
k8s/llms/gemma-3-12b/: service.yaml  (+1 more)
k8s/wsd_model/: deployment.yaml  pvc.yaml  service.yaml
src/: __init__.py  base_run.py  lexical_variation.py  lexical_variation_run.py
src/experiment_runs/: no_perturbation_llama_3-2_1b.py
src/inferences/: amega.py  mmlu.py  squad.py
src/notebooks/: correlation_analysis_size.ipynb  detailed_analysis_lexical.ipynb  detailed_analysis_syntactic.ipynb  inter_model_statistical_tests.ipynb  intra_model_statistical_tests.ipynb  lexical_approach_comparison.ipynb  mmlu_gpt4nano.ipynb  mmlu_llama_3-2_3b.ipynb  perturbation_stats.ipynb  rank_plots.ipynb  results_tables.ipynb
src/utils/: experiment.py  load_hf_data.py  metrics.py  rate_limiter.py  update_amega_eval.py
(+433 files in other folders)
