[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-prompt-perturbation"
version = "0.1.0"
authors = [
    { name = "Bogdan" }
]
description = "LLM Prompt Perturbation Experiments"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "haystack-ai",
    "tqdm",
    "wn",
    "spacy[transformers]",
    "lemminflect",
    "tiktoken",
    "blobfile",
    "protobuf",
    "evaluate",
    "sentence-transformers",
    "google-cloud-aiplatform",
    "statsmodels",
]

[tool.hatch.build.targets.wheel]
packages = ["src"] 